<resources>

    <string name="app_name">CnnMobilenetTrainDemo</string>
    <string name="create_or_enter_group">Create Group/Join Group</string>
    <string name="exit_group">Leave Group</string>
    <string name="show_dfs_info">Check Distributed Files</string>
    <string name="format_dfs">Format Distributed Files</string>
    <string name="distribute">Distribution</string>
    <string name="etc">ETC</string>
    <string name="start">Start Finetuning</string>

</resources>